# LightFold

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/lightfold/: CMakeLists.txt  image.cpp  image.h  imageio.cpp  lightfold.cpp
src/lightfold/aggregate/: bvh.cpp  bvh.h
src/lightfold/bsdf/: diffuse.h
src/lightfold/camera/: perspective.cpp  perspective.h
src/lightfold/core/: aggregate.h  bsdf.cpp  bsdf.h  bssrdf.h  camera.cpp  camera.h  film.cpp  film.h  filter.cpp  filter.h  floating.h  image.cpp  image.h  imageio.cpp  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  lobe.cpp  lobe.h  material.cpp  material.h  medium.h  parallel.cpp  parallel.h  primitive.cpp  primitive.h  ray.h  rgb.h  sampler.cpp  sampler.h  scene.cpp  scene.h  settings.h  shape.cpp  shape.h  sobolmatrices.cpp  sobolmatrices.h  (+7 more)
src/lightfold/display/: progress.cpp  progress.h
src/lightfold/integrator/: directlighting.cpp  directlighting.h  pathtracing.cpp  pathtracing.h
src/lightfold/light/: pointlight.cpp  pointlight.h
src/lightfold/lobe/: diffuse.h
src/lightfold/main/: lightfold.cpp
src/lightfold/material/: matte.cpp  matte.h
src/lightfold/math/: bsdfmath.h  math.h  ray.h  sample.cpp  sample.h  transform.cpp  transform.h  vecmath.cpp  vecmath.h  vecmathalt.h
src/lightfold/objects/: camera.cpp  camera.h  shape.cpp  shape.h
src/lightfold/rng/: pcg_extras.h
src/lightfold/sample/: sampler.cpp  sampler.h
src/lightfold/shape/: triangle.cpp  triangle.h
src/lightfold/texture/: constanttexture.h
src/lightfold/util/: math.h  sample.h  (+2 more)
(+3 files in other folders)
